# Contador_Palabras_Texto

./: .coverage  .gitignore  GITHUB_ACTIONS_SETUP.md  LICENSE  README.md  analisis_resultado.txt  analysis_20260313_081425.csv  analysis_20260313_081425.json  analysis_20260313_081425.txt  analysis_20260314_183334.csv  analysis_20260314_183334.txt  analysis_20260314_183700.csv  analysis_20260314_183700.txt  analysis_20260314_184050.json  analysis_20260314_184050.txt  analysis_20260314_184803.csv  analysis_20260314_185418.csv  no  pyproject.toml  pytest.ini  requirements.txt  s
.github/workflows/: README.md  linting.yml  tests.yml
asistencia_IA/: decisiones.md  decisionesMIAS.md  fase7_testFinales.md  incidencias.md  prompts.md  respuestasDeLaIA.md  roadmap.md
src/: main.py  run.py
src/exportacionesDel_Usuario/: analysis_20260314_232801.txt  analysis_20260314_232918.json  analysis_20260314_232945.csv  chuleta wey.txt  primer intento.txt
src/text_analyzer/: main.py
src/text_analyzer/core/: analyzer.py  linguistic.py  models.py  utils.py
src/text_analyzer/errors/: custom_exceptions.py  error_handler.py
src/text_analyzer/interfaces/: app.py  cli.py  gui.py  gui_formatter.py
src/text_analyzer/io/: exporter.py  file_loader.py  input_handler.py
src/text_analyzer/login/: logger.py
src/text_analyzer/storage/: history.json  history_manager.py
test/: conftest.py  test_analyzer.py  test_cli.py  test_exporter.py  test_file_loader.py  test_gui.py
